Add notifications help dialog text, buttons and all concept

--- a/app/src/main/res/values-ru/strings_dialog.xml
+++ b/app/src/main/res/values-ru/strings_dialog.xml
@@ -4,10 +4,21 @@
     <!-- Dialog -->
 
     <!-- Dialog titles and text -->
-    <string name="dialog_title_notifications">Очистить корзину</string>
+    <string name="dialog_title_notifications">Настройка уведомлений</string>
     <string name="dialog_text_notifications">
-        Вы уверены, что хотите безвозвратно удалить все не скрытые заметки из корзины?
+        Для лучшей работы уведомлений в приложении вам необходимо сделать 3 вещи:\n\n1. Включить
+        автозапуск приложения в \"Настройка\". Это позволит нам отобразить уведомления в шторке,
+        после перезагрузки вашего устройства.\n2. Выключить оптимизацию батареи в \"Настройках\".
+        Это позволит отображать уведомления, даже когда вы его закроете.\n3. Выключите \"Показывать
+        уведомления\" для \"Вечного сервиса\". Этот сервис помогает приложению не потерять ваши
+        уведомления и отображать их всё время в шторке. Чтобы вам не мешало уведомление самого
+        сервиса, его необходимо скрыть.\n\nДля первого и второго пункта используйте кнопку
+        \"Настройки\", для третьего - кнопку \"Скрыть сервис\".
     </string>
+    <string name="dialog_notifications_settings">Настройки</string>
+    <string name="dialog_notifications_channel">Скрыть сервис</string>
+    <string name="dialog_notifications_done">Готово!</string>
+
 
     <string name="dialog_title_clear_bin">Очистить корзину</string>
     <string name="dialog_text_clear_bin">
