--- a/app/src/main/res/values/strings_dialog.xml
+++ b/app/src/main/res/values/strings_dialog.xml
@@ -4,10 +4,20 @@
     <!-- Dialog -->
 
     <!-- Dialog titles and text -->
-    <string name="dialog_title_notifications">Clear bin</string>
+    <string name="dialog_title_notifications">Setup notifications</string>
     <string name="dialog_text_notifications">
-        Are you sure you want to permanently delete all not hidden notes from bin?
+        For better work of application notifications you need do 3 things:\n\n1. Turn ON autostart
+        in \"App settings\". It allow us display your status bar notifications after device
+        restart.\n2. Turn OFF battery restriction (battery saver) in \"App settings\". It allow to
+        display notifications in status bar even when you close app.\n3.Turn OFF \"show
+        notifications\" for Eternal service. This service allows app not to miss your
+        notifications.\n\nFor first and second option use \"App settings\" button, for third -
+        use \"Hide service\" button.
     </string>
+    <string name="dialog_notifications_settings">App settings</string>
+    <string name="dialog_notifications_channel">Hide service</string>
+    <string name="dialog_notifications_done">All done!</string>
+
 
     <string name="dialog_title_clear_bin">Clear bin</string>
     <string name="dialog_text_clear_bin">
