--- a/app/src/main/res/values/values_preference.xml
+++ b/app/src/main/res/values/values_preference.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <bool name="pref_first_start">true</bool>
+    <bool name="pref_notifications_help">true</bool>
 
     <integer name="pref_app_theme">2</integer>
 
