Finish setup theme for NotificationHelp dialog

--- a/app/src/main/res/values-ru/strings_dialog.xml
+++ b/app/src/main/res/values-ru/strings_dialog.xml
@@ -13,10 +13,10 @@
         уведомления\" для \"Вечного сервиса\". Этот сервис помогает приложению не потерять ваши
         уведомления и отображать их всё время в шторке. Чтобы вам не мешало уведомление самого
         сервиса, его необходимо скрыть.\n\nДля первого и второго пункта используйте кнопку
-        \"Настройки\", для третьего - кнопку \"Скрыть сервис\".
+        \"Настройки\", для третьего - кнопку \"Скрыть уведомление\".
     </string>
     <string name="dialog_notifications_settings">Настройки</string>
-    <string name="dialog_notifications_channel">Скрыть сервис</string>
+    <string name="dialog_notifications_channel">Скрыть уведомление</string>
     <string name="dialog_notifications_done">Готово!</string>
 
 
