--- a/app/src/main/res/values/strings_dialog.xml
+++ b/app/src/main/res/values/strings_dialog.xml
@@ -10,12 +10,12 @@
         in \"App settings\". It allow us display your status bar notifications after device
         restart.\n2. Turn OFF battery restriction (battery saver) in \"App settings\". It allow to
         display notifications in status bar even when you close app.\n3.Turn OFF \"show
-        notifications\" for Eternal service. This service allows app not to miss your
+        notifications\" for \"Eternal service\". This service allows app not to miss your
         notifications.\n\nFor first and second option use \"App settings\" button, for third -
-        use \"Hide service\" button.
+        use \"Hide notification\" button.
     </string>
     <string name="dialog_notifications_settings">App settings</string>
-    <string name="dialog_notifications_channel">Hide service</string>
+    <string name="dialog_notifications_channel">Hide notification</string>
     <string name="dialog_notifications_done">All done!</string>
 
 
