--- a/app/src/main/res/layout/inc_roll_add_panel.xml
+++ b/app/src/main/res/layout/inc_roll_add_panel.xml
@@ -43,7 +43,7 @@
                     android:importantForAutofill="noExcludeDescendants"
                     android:maxLines="5"
                     tools:ignore="TextFields"
-                    tools:text="@string/preview_note_text" />
+                    tools:text="@sample/preview.json/note/text[0]" />
 
                 <ImageButton
                     android:id="@+id/add_button"
