--- a/app/src/main/res/layout/inc_note_roll_info.xml
+++ b/app/src/main/res/layout/inc_note_roll_info.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/progress_text"
                 style="@style/Text.Note.Info"
                 android:layout_width="wrap_content"
-                tools:text="@string/preview_note_done"
+                tools:text="@sample/preview.json/note/done[0]"
                 tools:visibility="visible" />
 
             <LinearLayout
@@ -68,13 +68,13 @@
                 style="@style/Text.Note.Info"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                tools:text="@string/preview_note_time" />
+                tools:text="@sample/preview.json/note/date[0]" />
 
             <TextView
                 android:id="@+id/create_text"
                 style="@style/Text.Note.Info"
                 android:layout_width="wrap_content"
-                tools:text="@string/preview_note_time" />
+                tools:text="@sample/preview.json/note/date[0]" />
 
         </LinearLayout>
 
