--- a/app/src/main/res/layout/inc_note_text_info.xml
+++ b/app/src/main/res/layout/inc_note_text_info.xml
@@ -54,13 +54,13 @@
                 style="@style/Text.Note.Info"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                tools:text="@string/preview_note_time" />
+                tools:text="@sample/preview.json/note/date[0]" />
 
             <TextView
                 android:id="@+id/create_text"
                 style="@style/Text.Note.Info"
                 android:layout_width="wrap_content"
-                tools:text="@string/preview_note_time" />
+                tools:text="@sample/preview.json/note/date[0]" />
 
         </LinearLayout>
 
