--- a/app/src/main/res/layout/view_loading.xml
+++ b/app/src/main/res/layout/view_loading.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="?attr/clPrimary"
+        android:background="@drawable/bg_dialog"
         android:orientation="horizontal"
         android:paddingHorizontal="@dimen/layout_24dp"
         android:paddingVertical="@dimen/layout_16dp"
