--- a/app/src/main/res/values/strings_dialog.xml
+++ b/app/src/main/res/values/strings_dialog.xml
@@ -121,4 +121,6 @@
     <string name="dialog_about_logo_designer">Logo designer:\nPolepkina Arina</string>
     <string name="dialog_about_email" translatable="false">lex.kuznet@gmail.com</string>
 
+    <string name="email_about_subject">About Scriptum app</string>
+
 </resources>
