--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -53,6 +53,8 @@
         application close. Please turn off notifications for this channel
     </string>
 
+    <string name="notification_button_unbind">Unbind</string>
+
     <plurals name="notification_count_title">
         <item quantity="zero">You have %1$d notifications</item>
         <item quantity="one">You have %1$d notification</item>
