Better alarm logo transition

--- a/app/src/main/res/drawable/bg_dialog.xml
+++ b/app/src/main/res/drawable/bg_dialog.xml
@@ -5,6 +5,6 @@
 
     <solid android:color="?attr/clPrimary" />
     <corners android:radius="@dimen/dialog_radius" />
-    <size tools:height="@dimen/icon_48dp" tools:width="@dimen/icon_128dp"/>
+    <size tools:height="48dp" tools:width="128dp"/>
 
 </shape>
