--- a/app/src/main/res/drawable/bg_splash_screen.xml
+++ b/app/src/main/res/drawable/bg_splash_screen.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <item android:drawable="@color/background_launcher"/>
+    <item android:drawable="@color/background_launcher"
+        tools:height="600dp"
+        tools:width="270dp" />
 
-    <item>
-        <bitmap android:gravity="center" android:src="@mipmap/img_logo"/>
+    <item android:width="@dimen/logo_big_size"
+        android:height="@dimen/logo_big_size"
+        android:gravity="center">
+        <bitmap android:gravity="fill_horizontal|fill_vertical"
+            android:src="@mipmap/img_logo" />
     </item>
 
 </layer-list>
