--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -22,6 +22,8 @@
 
     <integer name="list_fade_time">200</integer>
 
+    <integer name="alarm_start_delay">200</integer>
+    <integer name="alarm_start_time">500</integer>
     <integer name="alarm_show_delay">500</integer>
     <integer name="alarm_show_time">500</integer>
 
