Change overscroll color + rename files

--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -44,7 +44,7 @@
                 android:visibility="gone"
                 tools:visibility="visible"
                 tools:itemCount="3"
-                tools:listitem="@layout/item_roll" />
+                tools:listitem="@layout/item_roll_content" />
 
             <!--  Add to info/progress/recycler a bottom margin = size of this done progress.  -->
             <sgtmelon.scriptum.infrastructure.widgets.SmoothProgressBar
