--- a/app/src/main/res/values/strings_app.xml
+++ b/app/src/main/res/values/strings_app.xml
@@ -73,6 +73,8 @@
     </string>
 
     <!-- Button -->
+    <string name="button_request_permission">Application need a permission</string>
+
     <string name="button_disable">Disable</string>
     <string name="button_repeat">Repeat</string>
 
@@ -108,12 +110,5 @@
     <string name="snackbar_message_notification">Notification is removed</string>
 
     <string name="snackbar_action_cancel">Cancel</string>
-
-    <!--  Error text  -->
-    <string name="error_something_wrong">Something went wrong… But we will try to fix it!</string>
-
-    <string name="error_start_activity">
-        Sorry, we didn\'t find any application to do this action :(
-    </string>
 
 </resources>
