--- a/app/src/main/res/layout/view_rename.xml
+++ b/app/src/main/res/layout/view_rename.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/layout_24dp"
     tools:background="?attr/clPrimary"
-    android:paddingTop="@dimen/layout_16dp"
+    android:paddingTop="@dimen/layout_8dp"
     tools:layout_gravity="center">
 
     <!--  Setting of textColor and textColorHint through code -->
@@ -16,7 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@android:color/transparent"
+        android:background="@drawable/bg_rename_enter"
+        android:padding="@dimen/layout_8dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:hint="@string/hint_enter_rank_rename"
