--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -294,7 +294,7 @@
 
     <style name="EditText" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">?attr/clContent</item>
-        <item name="android:textColorHint">?attr/clDisable</item>
+        <item name="android:textColorHint">?attr/clContrast</item>
     </style>
 
     <style name="EditText.TextNote">
